--- a/home/.chezmoiscripts/linux/after/run_onchange_after_00-sanity-check.sh.tmpl
+++ b/home/.chezmoiscripts/linux/after/run_onchange_after_00-sanity-check.sh.tmpl
@@ -1,5 +1,5 @@
 #!/bin/bash
-{{ template "bash_loggers" . }}
+{{ template "bash_setup" . }}
 
 log_work "Sanity check for {{ .os_id }}"
 log_info "Headless: {{ .is_headless }}"
