--- a/home/.chezmoiscripts/linux/before/run_once_before_01-setup-bitwarden.sh.tmpl
+++ b/home/.chezmoiscripts/linux/before/run_once_before_01-setup-bitwarden.sh.tmpl
@@ -1,5 +1,5 @@
 #!/bin/bash
-{{ template "bash_loggers" . }}
+{{ template "bash_setup" . }}
 set -euo pipefail
 
 {{- if eq .environment "minimal" }}
