--- a/home/.chezmoiscripts/windows/after/run_onchange_after_00-sanity-check.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/after/run_onchange_after_00-sanity-check.ps1.tmpl
@@ -1,4 +1,4 @@
-{{ template "pwsh_loggers" . }}
+{{ template "pwsh_setup" . }}
 
 Log-Work "Sanity check for: {{ .os_id }}"
 Log-Info "Headless: {{ .is_headless }}"
