--- a/home/.chezmoiscripts/windows/before/run_onchange_before_00-install-bitwarden.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/before/run_onchange_before_00-install-bitwarden.ps1.tmpl
@@ -1,8 +1,5 @@
-{{ template "pwsh_loggers" . }}
+{{ template "pwsh_setup" . }}
 $ErrorActionPreference = "Stop"
-
-$MiseDir = Join-Path $Home ".local\bin"
-if ($env:Path -notlike "*$MiseDir*") { $env:Path = "$MiseDir;$env:Path" }
 
 Log-Working "Installing Bitwarden CLI and JQ..."
 & mise use -g -q bitwarden-cli jq
