--- a/home/.chezmoiscripts/windows/before/run_onchange_before_10-install-packages.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/before/run_onchange_before_10-install-packages.ps1.tmpl
@@ -1,6 +1,6 @@
 # packages hash: {{ .packages.windows | toJson | sha256sum }}
 
-{{ template "pwsh_loggers" . }}
+{{ template "pwsh_setup" . }}
 $ErrorActionPreference = "Stop"
 
 {{ $packages := .packages.windows -}}
