--- a/home/.chezmoiscripts/linux/before/run_onchange_before_00-install-bitwarden.sh.tmpl
+++ b/home/.chezmoiscripts/linux/before/run_onchange_before_00-install-bitwarden.sh.tmpl
@@ -1,7 +1,6 @@
 #!/bin/bash
-{{ template "bash_loggers" . }}
+{{ template "bash_setup" . }}
 set -euo pipefail
-export PATH="$HOME/.local/bin:$PATH"
 
 log_working "Installing Bitwarden CLI and JQ..."
 mise use -g -q bitwarden-cli jq
