--- a/home/.chezmoiscripts/linux/before/run_onchange_before_10-install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/before/run_onchange_before_10-install-packages.sh.tmpl
@@ -1,7 +1,7 @@
 #!/bin/bash
 # packages hash: {{ .packages.linux | toJson | sha256sum }}
 
-{{ template "bash_loggers" . }}
+{{ template "bash_setup" . }}
 set -euo pipefail
 
 {{ $packages := .packages.linux -}}
