fix(env): align variables and refine ignore rules
Replace the deprecated .profile variable with .environment in ssh
deployment scripts to ensure correct conditional execution.

- Exclude Windows neovim symlink on non-windows platforms.
- Use recursive globs for windows scripts in the ignore file.
- Correct the work git config path in ignore patterns.

--- a/home/.chezmoiignore.tmpl
+++ b/home/.chezmoiignore.tmpl
@@ -3,7 +3,8 @@
 {{ if ne .chezmoi.os "windows" }}
 AppData/**
 Documents/**
-.chezmoiscripts/windows/
+.chezmoiscripts/windows/**
+symlink_AppData_Local_nvim
 {{- end }}
 
 {{ if ne .chezmoi.os "linux" }}
@@ -15,5 +16,5 @@ Documents/**
 {{- end }}
 
 {{ if ne .environment "work" -}}
-.config/git/config_work.tmpl
+.config/git/config_work
 {{- end }}
