--- a/home/.chezmoiscripts/linux/after/run_onchange_after_30-setup-ssh-keys.sh.tmpl
+++ b/home/.chezmoiscripts/linux/after/run_onchange_after_30-setup-ssh-keys.sh.tmpl
@@ -12,7 +12,7 @@ log_working "Deploying SSH Private Keys from Bitwarden..."
 bw get item "SSH_KEY_PERSONAL" | jq -r '.notes' > "$HOME/.ssh/id_ed25519"
 chmod 600 "$HOME/.ssh/id_ed25519"
 
-{{ if eq .profile "work" -}}
+{{ if eq .environment "work" -}}
 bw get item "SSH_KEY_WORK" | jq -r '.notes' > "$HOME/.ssh/id_ed25519_work"
 chmod 600 "$HOME/.ssh/id_ed25519_work"
 {{- end }}
