--- a/home/.chezmoiscripts/windows/after/run_onchange_after_00-sanity-check.ps1.tmpl
+++ b/home/.chezmoiscripts/windows/after/run_onchange_after_00-sanity-check.ps1.tmpl
@@ -1,6 +1,6 @@
 {{ template "pwsh_setup" . }}
 
-Log-Work "Sanity check for: {{ .os_id }}"
+Log-Working "Sanity check for: {{ .os_id }}"
 Log-Info "Headless: {{ .is_headless }}"
 Log-Info "Username: {{ .username }}"
 Log-Info "Email:    {{ .email }}"
