chore(linux): add libssl & pkg-config dependencies
Include development headers for SSL and package discovery to
support compiling tools and runtimes in the Linux environment.

--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -35,7 +35,7 @@
     ssh_keys = {{ $ssh_keys | toJson }}
 
 [data.packages]
-    linux = ["build-essential", "unzip", "git"]
+    linux = ["build-essential", "git", "libssl-dev", "pkg-config", "unzip"]
     windows = ["Git.Git"]
 
 [bitwarden]
